# QA

./: .gitignore  Dockerfile  MACHINE_SPECS.md  README.md  analyze_pdfs.py  build.sh  calculations.md  connection_details.dxf  convert_dxf_to_png.py  create_technical_diagrams.py  detailed_calculations.md  document_structure.py  enhanced_analysis.py  enhanced_visualizations.py  fly.toml  generate_all_diagrams.py  generate_drawings.py  generate_missing_diagrams.py  generate_report.py  merge_pdfs.py  notes.txt  our_structure.txt  prepare_visualizations.py  project_plan.md  pyproject.toml  render.yaml  report.tex  requirements.txt  serve.py  structural_calculations.py  titanic_analysis_report.md  verify_diagrams.py  verify_dxf_scale.py  verify_pdf_content.py  verify_png_files.py
app/: __init__.py  generate_test_data.py  main.py  pyproject.toml  requirements.txt  setup.py
app/halal_compliance_api/: main.py  startup.py
app/halal_compliance_api.egg-info/: PKG-INFO  requires.txt
app/results/: food_processing_condition1.json  food_processing_condition2.json  food_processing_condition3.json  food_processing_results.json  slaughterhouse_condition1.json  slaughterhouse_condition2.json  slaughterhouse_condition3.json  slaughterhouse_condition4.json  slaughterhouse_condition5.json  slaughterhouse_condition6.json  slaughterhouse_results.json
backend/: .dockerignore  Dockerfile  fly.toml  main.py  pyproject.toml  render.yaml  requirements.txt  setup.py
backend/app/: main.py  pyproject.toml
cad_drawings/: building_drawings.FCStd  check_environment.py  connection_details.dxf  create_connection_details.py  create_detailed_drawings.py  generate_projections.py  macro_drawings.FCMacro
cad_project/: building_drawings.py  building_model.py  capture_drawings.py  capture_screenshots.sh  capture_simple.py  convert_drawings.py  dataset5_building.20250119-183810.FCBak  dataset5_building.FCStd  drawing_documentation.md  export_drawings.py  export_drawings_v2.py  freecad_env_test.py  generate_diagrams.py  process_drawings.sh  render_drawings.py  standardize_images.py  test.20250119-161630.FCBak  test.FCStd  test_basic_export.py  (+8 more)
(+133 files in other folders)
