[tool.poetry]
name = "halal-compliance-api"
version = "0.1.0"
description = "Halal Compliance Monitoring System API"
authors = ["Devin"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
plotly = "^5.24.1"
pydantic = "^2.10.4"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
web3 = "^7.6.1"
aiohttp = "^3.11.11"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8080"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
