[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "halal-compliance-api"
version = "1.0.0"
description = "Halal Compliance Monitoring System API"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "matplotlib",
    "pandas",
    "python-multipart",
    "aiofiles"
]
