[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halal-compliance-backend"
version = "0.1.0"
description = "Halal Compliance Monitoring Backend"
authors = [
    {name = "Devin", email = "devin@example.com"}
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "numpy==1.26.3",
    "matplotlib==3.8.2",
    "python-multipart==0.0.6"
]

[tool.setuptools]
packages = ["halal_compliance_backend"]
