[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "halal-compliance-backend"
version = "0.1.0"
description = "Backend for Halal Compliance Monitoring System"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "numpy==1.26.2",
    "matplotlib==3.8.2",
    "python-multipart==0.0.6"
]
